--- a/src/app/preparation/preparation-modal-select/preparation-modal-select.component.html
+++ b/src/app/preparation/preparation-modal-select/preparation-modal-select.component.html
@@ -11,52 +11,74 @@
 </ion-header>
 <ion-content>
 
-  <div *ngIf="multiple">
-    <ion-card *ngIf="getOpenPreparations().length > 0">
-      <ion-title class="ion-padding-top">{{"MODAL_CHOOSE_PREPARATIONS_OPEN" | translate  }}</ion-title>
-      <ion-item *ngFor="let prep of getOpenPreparations()" lines="none" tappable>
-        <ion-checkbox [(ngModel)]="multipleSelection[prep.config.uuid]" slot="start"></ion-checkbox>
-        <div>
-          <span class="font-size-16">{{prep.name}}</span>
-        </div>
-      </ion-item>
-    </ion-card>
-    <ion-card *ngIf="showFinished===true && getArchivedPreparations().length > 0">
-      <ion-title class="ion-padding-top">{{"MODAL_CHOOSE_PREPARATIONS_ARCHIVED" | translate  }}</ion-title>
+  <ion-segment [(ngModel)]="preparation_segment">
+    <ion-segment-button value="open">
+      <ion-label>{{"CURRENT" | translate }}
+      </ion-label>
+    </ion-segment-button>
+    <ion-segment-button *ngIf="showFinished===true && getArchivedPreparations().length > 0" value="archive">
+      <ion-label>{{"TAB_ARCHIVE" | translate }}
+      </ion-label>
 
-      <ion-item *ngFor="let prep of getArchivedPreparations()" lines="none" tappable>
-        <ion-checkbox [(ngModel)]="multipleSelection[prep.config.uuid]" slot="start"></ion-checkbox>
-        <div>
-          <span class="font-size-16">{{prep.name}}</span>
-        </div>
-      </ion-item>
-    </ion-card>
+    </ion-segment-button>
+  </ion-segment>
+  <div  *ngIf="multiple">
+    <div [ngSwitch]="preparation_segment">
+      <div *ngSwitchCase="'open'">
+        <ion-card *ngIf="getOpenPreparations().length > 0">
+          <ion-title class="ion-padding-top">{{"MODAL_CHOOSE_PREPARATIONS_OPEN" | translate  }}</ion-title>
+          <ion-item *ngFor="let prep of getOpenPreparations()" lines="none" tappable>
+            <ion-checkbox [(ngModel)]="multipleSelection[prep.config.uuid]" slot="start"></ion-checkbox>
+            <div>
+              <span class="font-size-16">{{prep.name}}</span>
+            </div>
+          </ion-item>
+        </ion-card>
+      </div>
+      <div *ngSwitchCase="'archive'">
+        <ion-card >
+          <ion-title class="ion-padding-top">{{"MODAL_CHOOSE_PREPARATIONS_ARCHIVED" | translate  }}</ion-title>
+
+          <ion-item *ngFor="let prep of getArchivedPreparations()" lines="none" tappable>
+            <ion-checkbox [(ngModel)]="multipleSelection[prep.config.uuid]" slot="start"></ion-checkbox>
+            <div>
+              <span class="font-size-16">{{prep.name}}</span>
+            </div>
+          </ion-item>
+        </ion-card>
+      </div>
+    </div>
   </div>
-  <div *ngIf="!multiple">
+  <div  *ngIf="!multiple">
     <ion-radio-group [(ngModel)]="radioSelection">
+      <div [ngSwitch]="preparation_segment">
+        <div *ngSwitchCase="'open'">
 
-      <ion-card *ngIf="getOpenPreparations().length > 0">
-        <ion-title class="ion-padding-top">{{"MODAL_CHOOSE_PREPARATIONS_OPEN" | translate  }}</ion-title>
-        <ion-item *ngFor="let prep of getOpenPreparations()" lines="none" tappable>
-          <ion-radio slot="start" value="{{prep.config.uuid}}"></ion-radio>
-          <div>
-            <span class="font-size-16">{{prep.name}}</span>
-          </div>
-        </ion-item>
-      </ion-card>
-      <ion-card *ngIf="showFinished===true && getArchivedPreparations().length > 0">
-        <ion-title class="ion-padding-top">{{"MODAL_CHOOSE_PREPARATIONS_ARCHIVED" | translate  }}</ion-title>
+          <ion-card *ngIf="getOpenPreparations().length > 0">
+            <ion-title class="ion-padding-top">{{"MODAL_CHOOSE_PREPARATIONS_OPEN" | translate  }}</ion-title>
+            <ion-item *ngFor="let prep of getOpenPreparations()" lines="none" tappable>
+              <ion-radio slot="start" value="{{prep.config.uuid}}"></ion-radio>
+              <div>
+                <span class="font-size-16">{{prep.name}}</span>
+              </div>
+            </ion-item>
+          </ion-card>
+        </div>
+        <div *ngSwitchCase="'archive'">
+          <ion-card>
+            <ion-title class="ion-padding-top">{{"MODAL_CHOOSE_PREPARATIONS_ARCHIVED" | translate  }}</ion-title>
 
-        <ion-item *ngFor="let prep of getArchivedPreparations()" lines="none" tappable>
-          <ion-radio slot="start" value="{{prep.config.uuid}}"></ion-radio>
-          <div>
-            <span class="font-size-16">{{prep.name}}</span>
-          </div>
-        </ion-item>
-      </ion-card>
+            <ion-item *ngFor="let prep of getArchivedPreparations()" lines="none" tappable>
+              <ion-radio slot="start" value="{{prep.config.uuid}}"></ion-radio>
+              <div>
+                <span class="font-size-16">{{prep.name}}</span>
+              </div>
+            </ion-item>
+          </ion-card>
+        </div>
+      </div>
     </ion-radio-group>
   </div>
-
 </ion-content>
 <ion-footer class="ion-no-border">
   <ion-row>
