--- a/src/app/brew/brew-detail/brew-detail.component.html
+++ b/src/app/brew/brew-detail/brew-detail.component.html
@@ -302,21 +302,34 @@
         <h3>{{data.getExtractionYield()}}</h3>
       </ion-label>
     </ion-item>
-      <ion-item *ngIf="uiBrewHelper.fieldVisible(settings.manage_parameters.note,
-                      data.getPreparation().manage_parameters.note,
-                      data.getPreparation().use_custom_parameters)"
+    <ion-item *ngIf="uiBrewHelper.fieldVisible(settings.manage_parameters.note,
+                    data.getPreparation().manage_parameters.note,
+                    data.getPreparation().use_custom_parameters)"
 
-                [style.order]="uiBrewHelper.fieldOrder(settings.brew_order.after.note,
-                      data.getPreparation().brew_order.after.note,
-                      data.getPreparation().use_custom_parameters)">
-      <ion-label>
-        <h2>{{"BREW_DATA_NOTES" | translate }}:</h2>
-        <pre>{{data.note}}</pre>
-      </ion-label>
+              [style.order]="uiBrewHelper.fieldOrder(settings.brew_order.after.note,
+                    data.getPreparation().brew_order.after.note,
+                    data.getPreparation().use_custom_parameters)">
+    <ion-label>
+      <h2>{{"BREW_DATA_NOTES" | translate }}:</h2>
+      <pre>{{data.note}}</pre>
+    </ion-label>
+  </ion-item>
+
+    <div class="last-item"></div>
+  </ion-card>
+  <ion-card   *ngIf="showCupping()" class="ion-margin-horizontal popover" style="display:flex; flex-direction: column;">
+    <ion-item lines="none">
+      <span class="ion-title ion-padding-top">{{"BREW_HEADER_CUPPING" | translate }}</span>
+    </ion-item>
+    <div  class="ion-margin-horizontal" style="display: block">
+      <canvas #cuppingChart></canvas>
+    </div>
+    <ion-item *ngIf="data.cupping.notes !== ''" lines="none">
+      <ion-label position="stacked">{{"BREW_DATA_NOTES" | translate }}</ion-label>
+      <pre>{{data.cupping.notes}}</pre>
     </ion-item>
     <div class="last-item"></div>
   </ion-card>
-
 </ion-content>
 <ion-footer class="ion-no-border">
   <ion-row>
