--- a/src/app/preparation/preparation-edit/preparation-edit.component.html
+++ b/src/app/preparation/preparation-edit/preparation-edit.component.html
@@ -38,6 +38,17 @@
           </ion-select>
         </ion-item>
         <ion-item>
+          <ion-label>{{"PREPARATION_TOOLS"}}</ion-label>
+          <ion-input [(ngModel)]="nextToolName" name="nextToolName" type="text"></ion-input>
+
+          <ion-button (click)="addTool()" fill="clear" tappable>
+            <ion-icon color="accent" name="beanconqueror-add" slot="icon-only"></ion-icon>
+          </ion-button>
+        </ion-item>
+        <div>
+          <ion-chip (click)="deleteTool(tool)" *ngFor="let tool of data.tools;let i=index;">{{tool.name}} <ion-icon name="close"></ion-icon></ion-chip>
+        </div>
+        <ion-item>
           <ion-label position="stacked">{{"ARCHIVED"|translate}}?</ion-label>
           <ion-checkbox #finished="ngModel" [(ngModel)]="data.finished" name="finished"></ion-checkbox>
         </ion-item>
