#142 First implementation for preparation tools

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -633,6 +633,9 @@ ion-menu:host .menu-inner {
     word-wrap:break-spaces!important;
     white-space: break-spaces!important;
   }
+  ion-chip {
+    height:100%;
+  }
 }
 
 .color-white {
