--- a/src/app/preparation/preparation-edit/preparation-edit.component.html
+++ b/src/app/preparation/preparation-edit/preparation-edit.component.html
@@ -37,8 +37,11 @@
             <ion-select-option value="{{PREPARATION_STYLE_TYPE.PERCOLATION}}">{{"PREPARATION_STYLE_PERCOLATION" | translate}}</ion-select-option>
           </ion-select>
         </ion-item>
-        <ion-item>
+        <ion-item lines="none">
           <ion-label>{{"PREPARATION_TOOLS"}}</ion-label>
+        </ion-item>
+        <ion-item style="margin-top: -20px;">
+
           <ion-input [(ngModel)]="nextToolName" name="nextToolName" type="text"></ion-input>
 
           <ion-button (click)="addTool()" fill="clear" tappable>
