--- a/src/components/parameter/default-custom-parameter/default-custom-parameter.component.html
+++ b/src/components/parameter/default-custom-parameter/default-custom-parameter.component.html
@@ -55,6 +55,11 @@
     <ion-checkbox (ngModelChange)="save()"
                   [(ngModel)]="data.default_last_coffee_parameters.pressure_profile"></ion-checkbox>
   </ion-item>
+  <ion-item lines="none" tappable>
+    <ion-label>{{"BREW_DATA_PREPARATION_METHOD_TOOL" | translate}}</ion-label>
+    <ion-checkbox (ngModelChange)="save()"
+                  [(ngModel)]="data.default_last_coffee_parameters.method_of_preparation_tool"></ion-checkbox>
+  </ion-item>
 </ion-card>
 <ion-card *ngIf="data.manage_parameters.set_last_coffee_brew==true" class="ion-padding">
   <ion-title class="ion-padding-top">{{"SORT_PARAMETERS_MEANWHILE" | translate  }}</ion-title>
