--- a/src/app/preparation/preparation-add/preparation-add.component.html
+++ b/src/app/preparation/preparation-add/preparation-add.component.html
@@ -26,8 +26,7 @@
           </ion-card-content>
           <ion-card-content *ngIf="key === 'CUSTOM_PREPARATION'">
               <div class="ion-text-center">
-                <ion-icon class="ion-color-accent" name="beanconqueror-add" slot="icon-only"
-                          style="width:48px;"></ion-icon>
+                <ion-icon  name="beanconqueror-preparation-custom" slot="icon-only"></ion-icon>
               </div>
             <div class="ion-text-center" style="line-height:initial;">
               {{'PREPARATION_TYPE_ADD_CUSTOM' | translate}}
