--- a/src/app/preparation/preparation-popover-actions/preparation-popover-actions.component.scss
+++ b/src/app/preparation/preparation-popover-actions/preparation-popover-actions.component.scss
@@ -17,4 +17,12 @@
   ion-content, ion-content::part(scroll) {
     background:white;
   }
+
+  ion-content::part(scroll) {
+
+    padding-left:0px;
+    padding-right:0px;
+
+  }
+
 }
