--- a/src/app/beans/beans.page.html
+++ b/src/app/beans/beans.page.html
@@ -36,6 +36,17 @@
         {{"PAGE_BEANS_LIST_YOU_GOT_NO_FRESH_BEANS" | translate}}
         </div>
       </div>
+      <div class="ion-justify-content-end container">
+        <ion-button (click)="showFilter()" fill="clear" size="small" tappable>
+          <ion-icon [class.active]="isFilterActive()" class="black" name="beanconqueror-filter"
+                    slot="icon-only"></ion-icon>
+        </ion-button>
+      </div>
+
+      <ion-card *ngIf="openBeansLeftOverCount() > 0" class="ion-padding">
+        <ion-card-title>{{"BEANS_LEFT_OVER" | translate}}:&nbsp;{{openBeansLeftOverCount() | number : '.0-2'}}&nbsp;kg</ion-card-title>
+      </ion-card>
+
       <ion-virtual-scroll #openScroll *ngIf="openBeans.length > 0" [items]="openBeans"
                           approxItemHeight="200px">
         <bean-information (beanAction)="beanAction($event[0],$event[1])"  *virtualItem="let bean;"
