--- a/src/components/parameter/manage-custom-parameter/manage-custom-parameter.component.html
+++ b/src/components/parameter/manage-custom-parameter/manage-custom-parameter.component.html
@@ -39,7 +39,10 @@
     <ion-checkbox (ngModelChange)="triggerChanges($event)" [(ngModel)]="data.manage_parameters.pressure_profile"></ion-checkbox>
   </ion-item>
   <ion-item lines="none" tappable>
-    <ion-label>{{"BREW_DATA_PREPARATION_METHOD_TOOL" | translate}}</ion-label>
+    <ion-label>
+      <h2>{{"BREW_DATA_PREPARATION_METHOD_TOOL" | translate}}</h2>
+      <p>{{"PREPARATION_TOOLS_PLACEHOLDER" | translate}}</p>
+    </ion-label>
     <ion-checkbox (ngModelChange)="triggerChanges($event)" [(ngModel)]="data.manage_parameters.method_of_preparation_tool"></ion-checkbox>
   </ion-item>
 </ion-card>
